--- a/AtendimentoWeb/src/main/webapp/style/principal.css
+++ b/AtendimentoWeb/src/main/webapp/style/principal.css
@@ -8,3 +8,16 @@
 	margin-top: 10px;
 	margin-bottom: 10px;
 }
+
+.divPai {
+	width: 100%;
+	display:inline-flex;
+}
+
+.divFilha {
+	width: 200px;
+	min-width: 200px;
+	max-width: 200px;
+	float: left;
+	margin: 5px;
+}
